oxiplate-derive/tests/broken/numbers/eof-after-zero.stderr
error: Expected the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/numbers/eof-after-zero.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0")]
  |                       ^
